--- a/templates/login.html
+++ b/templates/login.html
@@ -22,7 +22,7 @@
         <h1>Login</h1>
         <form method="POST" action="/auth">
             <p><label>User:</label> <input class="form-control" type="text" name="user" required></p>
-            <p><label>Pass:</label> <input class="form-control" type="password" name="pass" required></p>
+            <p><label>Pass:</label> <input class="form-control" type="password" name="pass" placeholder="123456" required></p>
             <p><button class="btn btn-primary" type="submit">Sing in</button></p>
         </form>
     </div>
