--- a/templates/lista.html
+++ b/templates/lista.html
@@ -18,6 +18,7 @@
                     <td>{{skill.name}}</td>
                     <td>{{skill.experience}}</td>
                     <td>{{skill.version}}</td>
+                    <td><a href="{{ url_for('edit', id=skill.id) }}">Edit</a></td>
                 </tr>
                 {% endfor %}
             </tbody>
